# Algebra

./: CMakeLists.txt  Group.cpp  Group.h  List.cpp  List.h  Permutation.cpp  Permutation.h  README.md  Structure.cpp  Structure.h
cmake/: FindCatch.cmake
examples/: Borsuk.cpp  Borsuk_old.cpp  Borsuk_regular.cpp  CMakeLists.txt  Generate.cpp  RamseyExtension.cpp  RamseyGluing.cpp  Stats.cpp  Trees.cpp  Turan.cpp  Turan_old.cpp
inc/: Certificate.h  Graph.h  Group.h  Permutation.h  Structure.h
results/: R(3,2).txt  R(3,3).txt  R(3,7).txt  R(4,4).txt  R(C4,4).txt  R(C4,5).txt  R(C4,6).txt  R(C4,7).txt  R(C4,8).txt  R(C4,9).txt  R(C5,3).txt  R(C5,4).txt  R(C5,5).txt  R(C5,6).txt  R(C5,7).txt
results/RAMSEY/: R(3,4).txt  R(3,5).txt  R(3,6).txt  R(4,2).txt  R(4,3).txt  R(C4,2).txt  R(C4,3).txt  R(C5,2).txt
src/: Certificate.cpp  Graph.cpp  Group.cpp  Permutation.cpp  Structure.cpp
tests/: CMakeLists.txt  test_graph.cpp  test_group.cpp  test_permutation.cpp
